# cogamer-policy-cvc

./: .envrc  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: 2026-04-15-diagnostic-framework-design.md
skills/: analyze.md  evaluate.md  improve.md  play.md
src/cvc_policy/: cli.py  cogamer_policy.py  coglet.py  game_state.py  llm_executor.py  llm_worker.py  logcfg.py  proglet.py  programs.py  recorder.py  runtime.py
src/cvc_policy/agent/: __init__.py  budgets.py  cargo_cap.py  coglet_policy.py  decisions.py  main.py  navigation.py  pressure.py  resources.py  roles.py  scoring.py  targeting.py  tick_context.py  world_model.py
src/cvc_policy/scenarios/: __init__.py  _run.py  assertions.py  harness.py
src/cvc_policy/scenarios/cases/: exploration_small.py
src/cvc_policy/viewer/: render.py  report.html.j2
tests/: conftest.py  test_agent_isolation.py  test_cli.py  test_cogamer_policy_kwargs.py  test_coglet_policy.py  test_integration.py  test_llm_worker.py  test_programs.py  test_properties.py  test_recorder.py  test_recorder_integration.py  test_scenarios_assertions.py  test_scenarios_harness.py  test_viewer.py  test_world_model_summary.py
tests/agent/: test_budgets.py  test_cargo_cap.py  test_decisions.py  test_resources.py  test_scoring.py  test_world_model.py
