[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvc-policy"
version = "0.1.0"
description = "CvC policy for CoGames — clone, improve, submit"
requires-python = ">=3.12"
dependencies = [
  "mettagrid",
  "cogames",
]

[project.optional-dependencies]
llm = ["anthropic>=0.64.0"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv.sources]
cogames = {git = "https://github.com/Metta-AI/cogames.git"}
mettagrid = {git = "https://github.com/Metta-AI/mettagrid.git"}
