[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvc-policy"
version = "0.1.0"
description = "CvC policy for CoGames — clone, improve, submit"
requires-python = ">=3.12"
dependencies = [
  "mettagrid",
  "cogames",
  "typer>=0.12",
  "jinja2>=3.1",
]

[project.scripts]
cgp = "cvc_policy.cli:app"

[project.optional-dependencies]
llm = ["anthropic>=0.64.0"]
test = ["pytest>=8.0"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-timeout", "pytest-asyncio", "pytest-cov>=6", "hypothesis>=6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 10
addopts = "-m 'not llm and not scenario'"
markers = [
  "llm: tests that hit the LLM or spawn subprocesses; excluded by default. Run with `pytest -m llm` or `pytest -m ''`.",
  "scenario: scenario harness tests that build real mettagrid envs; excluded by default. Run with `pytest -m scenario`.",
]

[tool.coverage.run]
source = ["cvc_policy"]
omit = [
  # Unused coglet supervision-tree scaffolding — not reached from the
  # CvCPolicy runtime path. See docs/coverage-audit.md.
  "src/cvc_policy/runtime.py",
  "src/cvc_policy/lifelet.py",
  "src/cvc_policy/ticklet.py",
  "src/cvc_policy/trace.py",
  "src/cvc_policy/llm_executor.py",
  "src/cvc_policy/coglet.py",
  "src/cvc_policy/channel.py",
  "src/cvc_policy/handle.py",
  "src/cvc_policy/proglet.py",
  # One-shot subprocess bootstrap script.
  "src/cvc_policy/setup_policy.py",
]

[tool.uv.sources]
cogames = {git = "https://github.com/Metta-AI/cogames.git"}
mettagrid = {git = "https://github.com/Metta-AI/mettagrid.git"}
